# system-prompts-and-models-of-ai-tools

./: .gitignore  TRANSLATION_GUIDE.md  pyproject.toml  sync_and_translate.sh  translate.py
.github/workflows/: sync-translate.yml
openspec/changes/add-translation-script/: design.md  proposal.md  tasks.md
openspec/changes/add-translation-script/specs/translation-tool/: spec.md
